{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 118,
  "lineage": "16511568-9bc5-ddb7-f3bd-0ee4935fdc2e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff031593491e2496",
            "arn": "arn:aws:ec2:eu-west-3:557937909547:elastic-ip/eipalloc-0ff031593491e2496",
            "association_id": "eipassoc-05ba50a3cd8952cea",
            "domain": "vpc",
            "id": "eipalloc-0ff031593491e2496",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0327948b41133954c",
            "private_dns": "ip-10-0-101-118.eu-west-3.compute.internal",
            "private_ip": "10.0.101.118",
            "public_dns": "ec2-13-38-187-181.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.38.187.181",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-nat-eip",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-nat-eip",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:557937909547:internet-gateway/igw-03482a090051b31b8",
            "id": "igw-03482a090051b31b8",
            "owner_id": "557937909547",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-igw",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-igw",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "vpc_id": "vpc-085d1508f580455ed"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "plan-charge-prod-alb-logs-403tac40",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:557937909547:loadbalancer/app/plan-charge-prod-alb/bbd2924f32e113a3",
            "arn_suffix": "app/plan-charge-prod-alb/bbd2924f32e113a3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "plan-charge-prod-alb-2004483215.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:557937909547:loadbalancer/app/plan-charge-prod-alb/bbd2924f32e113a3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "plan-charge-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ca82e9b6ee900305"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-031435e219eb23350"
              },
              {
                "subnet_id": "subnet-0f9ff0127fc5d92b6"
              }
            ],
            "subnets": [
              "subnet-031435e219eb23350",
              "subnet-0f9ff0127fc5d92b6"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-alb",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-alb",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "vpc_id": "vpc-085d1508f580455ed",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:557937909547:listener/app/plan-charge-prod-alb/bbd2924f32e113a3/4fd014eca072d836",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:557937909547:targetgroup/plan-charge-prod-frontend-tg/12270fa6da916511",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:557937909547:listener/app/plan-charge-prod-alb/bbd2924f32e113a3/4fd014eca072d836",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:557937909547:loadbalancer/app/plan-charge-prod-alb/bbd2924f32e113a3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:557937909547:targetgroup/plan-charge-prod-backend-tg/4ceb3ca347763b24",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:557937909547:listener-rule/app/plan-charge-prod-alb/bbd2924f32e113a3/4fd014eca072d836/03834e0ca487b764",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*",
                      "/docs",
                      "/openapi.json",
                      "/redoc"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:557937909547:listener-rule/app/plan-charge-prod-alb/bbd2924f32e113a3/4fd014eca072d836/03834e0ca487b764",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-3:557937909547:listener/app/plan-charge-prod-alb/bbd2924f32e113a3/4fd014eca072d836",
            "priority": 100,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "assets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:557937909547:targetgroup/plan-charge-prod-frontend-tg/12270fa6da916511",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:557937909547:listener-rule/app/plan-charge-prod-alb/bbd2924f32e113a3/4fd014eca072d836/217684aea3e0ddba",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*.png",
                      "*.svg",
                      "/assets/*",
                      "/favicon.ico",
                      "/robots.txt"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:557937909547:listener-rule/app/plan-charge-prod-alb/bbd2924f32e113a3/4fd014eca072d836/217684aea3e0ddba",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-3:557937909547:listener/app/plan-charge-prod-alb/bbd2924f32e113a3/4fd014eca072d836",
            "priority": 200,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.frontend",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:557937909547:targetgroup/plan-charge-prod-backend-tg/4ceb3ca347763b24",
            "arn_suffix": "targetgroup/plan-charge-prod-backend-tg/4ceb3ca347763b24",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:557937909547:targetgroup/plan-charge-prod-backend-tg/4ceb3ca347763b24",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-3:557937909547:loadbalancer/app/plan-charge-prod-alb/bbd2924f32e113a3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "plan-charge-prod-backend-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-backend-tg",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-backend-tg",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-085d1508f580455ed"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:557937909547:targetgroup/plan-charge-prod-frontend-tg/12270fa6da916511",
            "arn_suffix": "targetgroup/plan-charge-prod-frontend-tg/12270fa6da916511",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:557937909547:targetgroup/plan-charge-prod-frontend-tg/12270fa6da916511",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-3:557937909547:loadbalancer/app/plan-charge-prod-alb/bbd2924f32e113a3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "plan-charge-prod-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-frontend-tg",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-frontend-tg",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-085d1508f580455ed"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff031593491e2496",
            "association_id": "eipassoc-05ba50a3cd8952cea",
            "connectivity_type": "public",
            "id": "nat-04b0ef390b699eef9",
            "network_interface_id": "eni-0327948b41133954c",
            "private_ip": "10.0.101.118",
            "public_ip": "13.38.187.181",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-031435e219eb23350",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-nat-gateway",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-nat-gateway",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:557937909547:route-table/rtb-09456c84ab8063417",
            "id": "rtb-09456c84ab8063417",
            "owner_id": "557937909547",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04b0ef390b699eef9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-private-rt",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-private-rt",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "timeouts": null,
            "vpc_id": "vpc-085d1508f580455ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:557937909547:route-table/rtb-0fb5c1c57b639b14a",
            "id": "rtb-0fb5c1c57b639b14a",
            "owner_id": "557937909547",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03482a090051b31b8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-public-rt",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-public-rt",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "timeouts": null,
            "vpc_id": "vpc-085d1508f580455ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bec90442de8ac8cd",
            "route_table_id": "rtb-09456c84ab8063417",
            "subnet_id": "subnet-04e83c8c930637597"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a475d5e81331932",
            "route_table_id": "rtb-09456c84ab8063417",
            "subnet_id": "subnet-075ba669585873bb8"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0f3b84ce7861f00",
            "route_table_id": "rtb-0fb5c1c57b639b14a",
            "subnet_id": "subnet-031435e219eb23350"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084af69d499fc6bd0",
            "route_table_id": "rtb-0fb5c1c57b639b14a",
            "subnet_id": "subnet-0f9ff0127fc5d92b6"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:557937909547:security-group/sg-0ca82e9b6ee900305",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca82e9b6ee900305",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "plan-charge-prod-alb-20250815200938393100000004",
            "name_prefix": "plan-charge-prod-alb-",
            "owner_id": "557937909547",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-alb-sg",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-alb-sg",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "timeouts": null,
            "vpc_id": "vpc-085d1508f580455ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:557937909547:security-group/sg-0a6cd0e7920726c46",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6cd0e7920726c46",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Backend API from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ca82e9b6ee900305"
                ],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ca82e9b6ee900305"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "plan-charge-prod-ecs-tasks-20250815200941540800000006",
            "name_prefix": "plan-charge-prod-ecs-tasks-",
            "owner_id": "557937909547",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-ecs-tasks-sg",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-ecs-tasks-sg",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "timeouts": null,
            "vpc_id": "vpc-085d1508f580455ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:557937909547:security-group/sg-0328e94304e553c61",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0328e94304e553c61",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a6cd0e7920726c46"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "plan-charge-prod-rds-20250815200944304700000008",
            "name_prefix": "plan-charge-prod-rds-",
            "owner_id": "557937909547",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-rds-sg",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-rds-sg",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "timeouts": null,
            "vpc_id": "vpc-085d1508f580455ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:557937909547:security-group/sg-060e2b425add84ef4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-060e2b425add84ef4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from ECS",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a6cd0e7920726c46"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "plan-charge-prod-redis-20250815200944304400000007",
            "name_prefix": "plan-charge-prod-redis-",
            "owner_id": "557937909547",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-redis-sg",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-redis-sg",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "timeouts": null,
            "vpc_id": "vpc-085d1508f580455ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:557937909547:subnet/subnet-04e83c8c930637597",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e83c8c930637597",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557937909547",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-private-subnet-1",
              "Owner": "NDA-Partners",
              "Project": "plan-charge",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-private-subnet-1",
              "Owner": "NDA-Partners",
              "Project": "plan-charge",
              "Type": "Private"
            },
            "vpc_id": "vpc-085d1508f580455ed"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:557937909547:subnet/subnet-075ba669585873bb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075ba669585873bb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557937909547",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-private-subnet-2",
              "Owner": "NDA-Partners",
              "Project": "plan-charge",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-private-subnet-2",
              "Owner": "NDA-Partners",
              "Project": "plan-charge",
              "Type": "Private"
            },
            "vpc_id": "vpc-085d1508f580455ed"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:557937909547:subnet/subnet-031435e219eb23350",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031435e219eb23350",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "557937909547",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-public-subnet-1",
              "Owner": "NDA-Partners",
              "Project": "plan-charge",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-public-subnet-1",
              "Owner": "NDA-Partners",
              "Project": "plan-charge",
              "Type": "Public"
            },
            "vpc_id": "vpc-085d1508f580455ed"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:557937909547:subnet/subnet-0f9ff0127fc5d92b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9ff0127fc5d92b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "557937909547",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-public-subnet-2",
              "Owner": "NDA-Partners",
              "Project": "plan-charge",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-public-subnet-2",
              "Owner": "NDA-Partners",
              "Project": "plan-charge",
              "Type": "Public"
            },
            "vpc_id": "vpc-085d1508f580455ed"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:557937909547:vpc/vpc-085d1508f580455ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e8e619d342b8ed70",
            "default_route_table_id": "rtb-0558ed7b9683c0981",
            "default_security_group_id": "sg-0741e8369a0abe07e",
            "dhcp_options_id": "dopt-29e11341",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-085d1508f580455ed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0558ed7b9683c0981",
            "owner_id": "557937909547",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-vpc",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-vpc",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:557937909547:vpc-endpoint/vpce-061744d56a2e8c6b8",
            "cidr_blocks": [
              "3.5.224.0/22",
              "16.12.18.0/23",
              "3.5.204.0/22",
              "52.95.154.0/23",
              "16.12.20.0/24",
              "52.95.156.0/24"
            ],
            "id": "vpce-061744d56a2e8c6b8",
            "owner_id": "557937909547",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-23ad484a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-09456c84ab8063417"
            ],
            "service_name": "com.amazonaws.eu-west-3.s3",
            "service_region": "eu-west-3",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-s3-endpoint",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "plan-charge-prod-s3-endpoint",
              "Owner": "NDA-Partners",
              "Project": "plan-charge"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-085d1508f580455ed"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}